Add: self projects

--- a/web/index.html
+++ b/web/index.html
@@ -164,11 +164,11 @@
             <button class="navbar-link" data-nav-link>Resume</button>
           </li>
 
-          <!-- <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Portfolio</button>
+          <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Projects</button>
           </li>
 
-          <li class="navbar-item">
+          <!-- <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
           </li> -->
 
@@ -301,7 +301,7 @@
           - testimonials
         -->
 
-        <!-- <section class="testimonials">
+         <!-- <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -397,7 +397,7 @@
 
           </ul>
 
-        </section> -->
+        </section>  -->
 
 
         <!--
@@ -676,11 +676,13 @@
       <!--
         - #PORTFOLIO
       -->
-      <!-- 
-      <article class="portfolio" data-page="portfolio">
+        
+      
+
+      <article class="portfolio" data-page="projects">
 
         <header>
-          <h2 class="h2 article-title">Portfolio</h2>
+          <h2 class="h2 article-title">Projects</h2>
         </header>
 
         <section class="projects">
@@ -692,16 +694,16 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Web design</button>
+              <button data-filter-btn>Self Made</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Applications</button>
+              <button data-filter-btn>At Company</button>
             </li>
 
-            <li class="filter-item">
+            <!-- <li class="filter-item">
               <button data-filter-btn>Web development</button>
-            </li>
+            </li> -->
 
           </ul>
 
@@ -724,16 +726,16 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Self Made</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>At Company</button>
               </li>
 
-              <li class="select-item">
+              <!-- <li class="select-item">
                 <button data-select-item>Web development</button>
-              </li>
+              </li> -->
 
             </ul>
 
@@ -741,7 +743,7 @@
 
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="self made">
               <a href="#">
 
                 <figure class="project-img">
@@ -749,17 +751,17 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/project-1.png" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Share Over LAN</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Self Made</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="self made">
               <a href="#">
 
                 <figure class="project-img">
@@ -770,9 +772,9 @@
                   <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">Shell Access</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Self Made</p>
 
               </a>
             </li>
@@ -907,7 +909,7 @@
 
         </section>
 
-      </article> -->
+      </article>
 
 
 
