--- a/web/index.html
+++ b/web/index.html
@@ -1067,7 +1067,7 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form action="#" class="form" data-form >
+          <form method="post" action="#" class="form" data-form >
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
