Table route add

--- a/web/index.html
+++ b/web/index.html
@@ -785,6 +785,25 @@
               </button>
             </li>
 
+            <!-- <li class="project-item  active" data-filter-item data-category="at company">
+              <button type="button" class="" data-bs-toggle="modal" data-bs-target="#exampleModal3">
+                <div href="#">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+
+                    <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  </figure>
+
+                  <h3 class="project-title">Honda Tracking System</h3>
+
+                  <p class="project-category">At company</p>
+
+                </div>
+              </button>
+            </li> -->
+
 
           </ul>
 
@@ -815,13 +834,13 @@
               </div>
               <div class="d-flex">
                 <span style="font-weight: bold;">GITHUB LINK:</span> <!-- Made GitHub text bold -->
-                <a href="https://github.com/Sumit931kr/ShareOverLAN" target="_blank">https://github.com/Sumit931kr/ShareOverLAN</a>
+                <a href="https://github.com/Sumit931kr/ShareOverLAN"
+                  target="_blank">https://github.com/Sumit931kr/ShareOverLAN</a>
               </div>
             </div>
           </div>
         </div>
       </div>
-
 
       <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -842,16 +861,54 @@
               </div>
               <div class="d-flex">
                 <span style="font-weight: bold;">GITHUB LINK:</span> <!-- Made GitHub text bold -->
-                <a href="https://github.com/Sumit931kr/shell-access" target="_blank">https://github.com/Sumit931kr/shell-access</a>
+                <a href="https://github.com/Sumit931kr/shell-access"
+                  target="_blank">https://github.com/Sumit931kr/shell-access</a>
               </div>
               <div class="d-flex">
                 <span style="font-weight: bold;">NPM LINK:</span> <!-- Made GitHub text bold -->
-                <a href="https://www.npmjs.com/package/shell-access" target="_blank"> https://www.npmjs.com/package/shell-access</a>
+                <a href="https://www.npmjs.com/package/shell-access" target="_blank">
+                  https://www.npmjs.com/package/shell-access</a>
               </div>
             </div>
           </div>
         </div>
       </div>
+<!-- 
+      <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Shell-access</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body d-flex flex-column gap-3" style="font-family: Arial, sans-serif; color: #333;">
+              <div class="w-100 h-100">
+                <img style="width:100%;height:100%" src="./assets/images/project-2.png" alt="shareoverlan"
+                  loading="lazy">
+              </div>
+              <div>
+                <ul>
+                  <li>
+                    Implement the offline map using a leaflet, the user can track the car inside
+                    the factory.
+                  </li>
+                  <li>Create a Intractive user interface.</li>
+                </ul>
+              </div>
+              <div class="d-flex">
+                <span style="font-weight: bold;">GITHUB LINK:</span> 
+                <a href="https://github.com/Sumit931kr/shell-access"
+                  target="_blank">https://github.com/Sumit931kr/shell-access</a>
+              </div>
+              <div class="d-flex">
+                <span style="font-weight: bold;">NPM LINK:</span>
+                <a href="https://www.npmjs.com/package/shell-access" target="_blank">
+                  https://www.npmjs.com/package/shell-access</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div> -->
 
       <!--
         - #BLOG
@@ -1058,7 +1115,7 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.174198204198!2d77.3131!3d28.4082!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfcf8b1c1c1b3%3A0x1c1c1c1c1c1c1c1c!2sFaridabad%2C%20Haryana%2C%20India!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
+              src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d7783.935423360708!2d77.3195796929442!3d28.477278641843835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m1!3e6!5e0!3m2!1sen!2sin!4v1735661141127!5m2!1sen!2sin"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
@@ -1067,7 +1124,7 @@
 
           <h3 class="h3 form-title">Contact Form</h3>
 
-          <form method="post" action="#" class="form" data-form >
+          <form method="post" action="#" class="form" data-form>
 
             <div class="input-wrapper">
               <input type="text" name="fullname" class="form-input" placeholder="Full name" required data-form-input>
